--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">Over mij</a></li>
-	         <li><a class="smoothscroll" href="#resume">curriculum vitae</a></li>
+	         <li><a class="smoothscroll" href="#resume">Curriculum vitae</a></li>
             <li><a class="smoothscroll" href="#portfolio">Werkervaring</a></li>
             <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Ik ben Dion Rats</h1>
-            <h3>Ik ben een <span>HBO student</span> aan de <span>opleiding ICT</span> aan de HAN die er <span>niet van houdt stil te staan</span> en altijd bezig is met <span>zichzelf verbeteren</span><a class="smoothscroll" href="#about"><br>start met scrollen</a>
+            <h3>Ik ben een <span>HBO student</span> aan de <span>opleiding ICT</span> van de HAN die er <span>niet van houdt stil te staan</span> en altijd bezig is met <span>zichzelf te verbeteren</span><a class="smoothscroll" href="#about"><br>Start met scrollen</a>
             en leer meer <a class="smoothscroll" href="#about">over mij</a>.</h3>
             <hr />
             <ul class="social">
@@ -93,7 +93,7 @@
 
             <h2>Over Mij</h2>
 
-            <p>Het eerste wat ik doe als ik wakker word, is mijn social media checken. En ik ben gek op alles waar drop in zit. Gelukkig heb ik meer interesses als social media en drop. Anders zou er weinig tijd over blijven om te studeren. Ik studeer momenteel de opleiding ICT aan de HAN in nijmegen waar ik momenteel in mijn propedeuse jaar zit. <br>Mijn naam is Dion, ik ben een 17 jarige student die van hard werken houd en een grap of grol op zijn tijd van belang vind, anders wordt het zo'n saaie bedoeling. Ik vind het belangrijk om iedereen tevreden te houden en vind het leuk om mijn best voor een ander te doen.
+            <p>Het eerste wat ik doe als ik wakker word, is mijn social media checken. En ik ben gek op alles waar drop in zit. Gelukkig heb ik meer interesses dan social media en drop. Anders zou er weinig tijd over blijven om te studeren. Ik doe momenteel de opleiding ICT aan de HAN in nijmegen waar ik momenteel in het propedeuse jaar zit. <br>Mijn naam is Dion, ik ben een 17 jarige student die van hard werken houdt en een grap of grol op zijn tijd van belang vindt, anders wordt het zo'n saaie bedoeling. Ik vind het belangrijk om iedereen tevreden te houden en vind het leuk om mijn best voor een ander te doen.
             </p>
 
             <div class="row">
@@ -136,7 +136,7 @@
       <div class="row education">
 
          <div class="three columns header-col">
-            <h1><span>Schooling</span></h1>
+            <h1><span>Scholing</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -162,7 +162,7 @@
 
                   <h3>Raayland College</h3>
                   <p class="info">HAVO<span>&bull;</span> <em class="date">2010 tot 2015</em></p>
-                  Op het Raayland College te Venray heb ik de Havo gevolgd, waarvan de eerste 3 jaar technovium waren. Dit is een meer HBO-georiënteerde manier van leren waarin er in groepen op project-basis gewerkt word.<br>
+                  Op het Raayland College te Venray heb ik de Havo gevolgd, waarvan de eerste 3 jaar technasium waren. Dit is een meer HBO-georiënteerde manier van leren waarin er in groepen op project-basis gewerkt wordt.<br>
                   <span>&bull;</span><i>Diploma: mei 2015</i>
                   <p>
                   
@@ -192,10 +192,10 @@
                <div class="twelve columns">
 
                   <h3>Familierestaurant het Roekenbosch </h3>
-                  <p class="info">Assistent kok <span>&bull;</span> <em class="date">September 2014 tot December 2015</em></p>
+                  <p class="info">Assistent-kok <span>&bull;</span> <em class="date">September 2014 tot December 2015</em></p>
 
                   <p>
-                  Bij Familierestaurant het Roekenbosch ben ik werkzaam geweest als assistent kok. Mijn taken hier bestonden uit het assisteren van de vaste kok, denk hierbij aan voorbereidend werk, koude kant, bufetten gevuld houden en klanten helpen in de snackbar
+                  Bij Familierestaurant het Roekenbosch ben ik werkzaam geweest als assistent-kok. Mijn taken hier bestonden uit het assisteren van de vaste kok, denk hierbij aan voorbereidend werk, koude kant, buffetten gevuld houden en klanten helpen in de snackbar.
                   </p>
 
                </div>
@@ -207,10 +207,10 @@
                <div class="twelve columns">
 
                   <h3>Nelipak Healthcare Packaging</h3>
-                  <p class="info">Productie medewerker<span>&bull;</span> <em class="date">Mei 2015 tot augustus 2015</em></p>
+                  <p class="info">Productiemedewerker<span>&bull;</span> <em class="date">Mei 2015 tot augustus 2015</em></p>
 
                   <p>
-                  Bij Nelipak Healthcare Packaging ben ik werkzaam geweest als productie medewerker. Mijn taken hier bestonden uit het verpakken van blisters en het controleren van deze blisters op zichtbare productie fouten.
+                  Bij Nelipak Healthcare Packaging ben ik werkzaam geweest als productiemedewerker. Mijn taken hier bestonden uit het verpakken van blisters en het controleren van deze blisters op zichtbare productiefouten.
                   </p>
 
                </div>
@@ -224,7 +224,7 @@
                   <p class="info">invalleraar<span>&bull;</span> <em class="date">Februari 2014 tot heden</em></p>
 
                   <p>
-                  Bij TonToon ben ik werkzaam als invalleraar. Mijn taak hier is het overnemen van de lesgroepen wanneer de vaste leraar uitvalt
+                  Bij TonToon ben ik werkzaam als invalleraar. Mijn taak hier is het overnemen van de lesgroepen wanneer de vaste leraar uitvalt.
                   </p>
 
                </div>
@@ -238,7 +238,7 @@
                   <p class="info">medewerker<span>&bull;</span> <em class="date">November 2013 tot Augustus 2014</em></p>
 
                   <p>
-                  Bij Linux4Home ben ik werkzaam geweest als medewerker in de winkel waar mijn werkzaamheden bestonden uit het te woord staan van klanten, het bijhouden van de voorraad, het instaleren van verschillende software en het repareren van computers en laptops
+                  Bij Linux4Home ben ik werkzaam geweest als medewerker in de winkel waar mijn werkzaamheden bestonden uit het te woord staan van klanten, het bijhouden van de voorraad, het installeren van verschillende software en het repareren van computers en laptops.
                   </p>
 
                </div>
@@ -266,7 +266,7 @@
                   <p class="info">bezorger zondagsnieuws<span>&bull;</span> <em class="date">Juni 2011 tot September 2014</em></p>
 
                   <p>
-                  Bij periodiek ben ik werkzaam geweest als bezorger van het zondagnieuws, mijn taken hier bestonden uit het insteken van de folders en het bezorgen van de folders in combinatie met de krant.
+                  Bij periodiek ben ik werkzaam geweest als bezorger van het zondagsnieuws, mijn taken hier bestonden uit het insteken van de folders en het bezorgen van de folders in combinatie met de krant.
                   </p>
 
                </div>
@@ -452,7 +452,7 @@
                      </li> <!-- slide ends -->
                      <li>
                         <blockquote>
-                           <p>Everybody is a genius. But is you judge a fish by it's ability to climb a tree, it wil live it's whole live believing that it is stupid
+                           <p>Everybody is a genius. But if you judge a fish by it's ability to climb a tree, it wil live it's whole live believing that it is stupid
                            </p>
                            <cite>Albert Einstein</cite>
                         </blockquote>
