--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                      </li> <!-- slide ends -->
                      <li>
                         <blockquote>
-                           <p>Hard work beats talent wheb talent doesn't work hard.
+                           <p>Hard work beats talent when talent doesn't work hard.
                            </p>
                            <cite>Tim Notke</cite>
                         </blockquote>
