Updated index en CV to current situation

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <h2>Over Mij</h2>
 
-            <p>Het eerste wat ik doe als ik wakker word, is mijn social media checken. En ik ben gek op alles waar drop in zit. Gelukkig heb ik meer interesses dan social media en drop. Anders zou er weinig tijd over blijven om te studeren. Ik doe momenteel de opleiding ICT aan de HAN in nijmegen waar ik momenteel in het propedeuse jaar zit. <br>Mijn naam is Dion, ik ben een 17 jarige student die van hard werken houdt en een grap of grol op zijn tijd van belang vindt, anders wordt het zo'n saaie bedoeling. Ik vind het belangrijk om iedereen tevreden te houden en vind het leuk om mijn best voor een ander te doen.
+            <p>Het eerste wat ik doe als ik wakker word, is mijn social media checken. En ik ben gek op alles waar drop in zit. Gelukkig heb ik meer interesses dan social media en drop. Anders zou er weinig tijd over blijven om te studeren. Ik doe momenteel de opleiding ICT aan de HAN in nijmegen waar ik momenteel in de hoofdfase zit. <br>Mijn naam is Dion, ik ben een 18 jarige student die van hard werken houdt en een grap of grol op zijn tijd van belang vindt, anders wordt het zo'n saaie bedoeling. Ik vind het belangrijk om iedereen tevreden te houden en vind het leuk om mijn best voor een ander te doen.
             </p>
 
             <div class="row">
@@ -186,6 +186,21 @@
          </div>
 
          <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Centerparcs Limburgse Peel </h3>
+                  <p class="info">Medewerker bediening <span>&bull;</span> <em class="date">Maart 2016 tot Heden</em></p>
+
+                  <p>
+                  Bij Centerparcs Limburgse Peel ben ik werkzaam als medewerker in de bediening waar ik in de verschillende restaurants en cafees die op het park aanwezig zijn mensen bedien en probeer hun verblijf zo aangenaam mogelijk te maken.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
 
             <div class="row item">
 
