Updated school informatie

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <p>
                   Bij de hbo opleiding HBO-ICT stoot je door tot het hart van de softwareindustrie! Niets staat immers nog vast. In de snel veranderende wereld van ICT moet je als eerste op de hoogte zijn van nieuwe trends, toepassingen en technieken. (bron: han.nl)
                   </p>
-
+                  <span>&bull;</span><i>Propedeuse: september 2016</i>
                </div>
 
             </div> <!-- item end -->
@@ -165,7 +165,7 @@
                   Op het Raayland College te Venray heb ik de Havo gevolgd, waarvan de eerste 3 jaar technasium waren. Dit is een meer HBO-georiënteerde manier van leren waarin er in groepen op project-basis gewerkt wordt.<br>
                   <span>&bull;</span><i>Diploma: mei 2015</i>
                   <p>
-                  
+
                   </p>
 
                </div>
@@ -600,7 +600,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2016 Dion Rats & Ceevee</li>  
+               <li>&copy; Copyright 2016 Dion Rats & Ceevee</li>
             </ul>
 
          </div>
