--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                   <p class="info">bachelor HBO-ICT<span>&bull;</span> <em class="date">2015 tot heden</em></p>
 
                   <p>
-                  Bij de hbo opleiding HBO-ICT stoot je door tot het hart van de softwareindustrie! Niets staat immers nog vast. In de snel veranderende wereld van ICT moet je als eerste op de hoogte zijn van nieuwe trends, toepassingen en technieken. (bron: han.nl)
-                  </p>
+                  Bij de hbo opleiding HBO-ICT stoot je door tot het hart van de softwareindustrie! Niets staat immers nog vast. In de snel veranderende wereld van ICT moet je als eerste op de hoogte zijn van nieuwe trends, toepassingen en technieken. (bron: han.nl)<br>
                   <span>&bull;</span><i>Propedeuse: september 2016</i>
+                  </p>
                </div>
 
             </div> <!-- item end -->
