--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
    <link rel="stylesheet" href="css/media-queries.css">
    <link rel="stylesheet" href="css/magnific-popup.css">
 
+   <!-- FONTS
+    ================================================== -->   
+   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+
    <!-- Script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
@@ -53,7 +57,7 @@
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
-
+      <canvas id="effect-canvas"></canvas>
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Ik ben Dion Rats</h1>
@@ -622,7 +626,10 @@
    <script src="js/jquery.fittext.js"></script>
    <script src="js/magnific-popup.js"></script>
    <script src="js/init.js"></script>
-
+   <script src="js/TweenLite.min.js"></script>
+   <script src="js/EasePack.min.js"></script>
+   <script src="js/rAF.js"></script>
+   <script src="js/demo-1.js"></script>
 </body>
 
 </html>
