--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 	<link rel="stylesheet" href="css/layout.css">
    <link rel="stylesheet" href="css/media-queries.css">
    <link rel="stylesheet" href="css/magnific-popup.css">
+   <link rel="stylesheet" href="css/skillset.css">
 
    <!-- FONTS
-    ================================================== -->   
+    ================================================== -->
    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 
    <!-- Script
@@ -50,7 +51,8 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">Over mij</a></li>
-	         <li><a class="smoothscroll" href="#resume">Curriculum vitae</a></li>
+	          <li><a class="smoothscroll" href="#resume">Curriculum vitae</a></li>
+            <li><a class="smoothscroll" href="#skills">Skills</a></li>
             <li><a class="smoothscroll" href="#portfolio">Werkervaring</a></li>
             <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
@@ -61,7 +63,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Ik ben Dion Rats</h1>
-            <h3>Ik ben een <span>HBO student</span> aan de <span>opleiding ICT</span> van de HAN die er <span>niet van houdt stil te staan</span> en altijd bezig is met <span>zichzelf te verbeteren</span><a class="smoothscroll" href="#about"><br>Start met scrollen</a>
+            <h3>Ik ben een <span>HBO student</span> aan de opleiding <span>Software Development</span> van de HAN die er <span>niet van houdt stil te staan</span> en altijd bezig is met <span>zichzelf te verbeteren</span><a class="smoothscroll" href="#about"><br>Start met scrollen</a>
             en leer meer <a class="smoothscroll" href="#about">over mij</a>.</h3>
             <hr />
             <ul class="social">
@@ -97,7 +99,7 @@
 
             <h2>Over Mij</h2>
 
-            <p>Het eerste wat ik doe als ik wakker word, is mijn social media checken. En ik ben gek op alles waar drop in zit. Gelukkig heb ik meer interesses dan social media en drop. Anders zou er weinig tijd over blijven om te studeren. Ik doe momenteel de opleiding ICT aan de HAN in nijmegen waar ik momenteel in de hoofdfase zit. <br>Mijn naam is Dion, ik ben een 18 jarige student die van hard werken houdt en een grap of grol op zijn tijd van belang vindt, anders wordt het zo'n saaie bedoeling. Ik vind het belangrijk om iedereen tevreden te houden en vind het leuk om mijn best voor een ander te doen.
+            <p>Het eerste wat ik doe als ik wakker word, is mijn social media checken. En ik ben gek op alles waar drop in zit. Gelukkig heb ik meer interesses dan social media en drop. Anders zou er weinig tijd over blijven om te studeren. Ik doe momenteel de opleiding ICT aan de HAN in nijmegen waar ik momenteel in de hoofdfase zit. <br>Mijn naam is Dion, ik ben een 19 jarige student die van hard werken houdt en een grap of grol op zijn tijd van belang vindt, anders wordt het zo'n saaie bedoeling. Ik vind het belangrijk om iedereen tevreden te houden en vind het leuk om mijn best voor een ander te doen.
             </p>
 
             <div class="row">
@@ -181,6 +183,49 @@
       </div> <!-- End Education -->
 
 
+      <!-- Projects
+      ----------------------------------------------- -->
+      <div class="row education">
+
+         <div class="three columns header-col">
+            <h1><span>Projecten</span></h1>
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Biomedical Primate Research Centre</h3>
+                  <p class="info">Donkey Kong<span>&bull;</span> <em class="date">November 2016</em></p>
+
+                  <p>
+                  Ik heb met een ontwikkelteam bestaande uit vijf personen een applicatie gemaakt in opdracht van BPRC. Deze opdracht omvatte een webapplicatie in combinatie met een database waarin data van onderzoeken kan worden opgeslagen en ingezien. Aan de hand van deze data kan het systeem vervolgens grafieken tekenen. Dit project is uitgevoert met de ontwikkelmethode RUP.
+                  </p>
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Atos</h3>
+                  <p class="info">Airplane Maintenace Book<span>&bull;</span> <em class="date">Mei 2017</em></p>
+
+                  <p>
+                    Ik heb met een ontwikkelteam bestaande uit zes personen door middel van de SCRUM ontwikkelmethode een applicatie ontwikkeld voor Atos. Deze applicatie slaat onderhoud aan vliegtuigen op in een blockchain wat voor tal van voordelen zorgt.
+                  </p>
+               </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End Projects -->
+
+
       <!-- Work
       ----------------------------------------------- -->
       <div class="row work">
@@ -190,6 +235,36 @@
          </div>
 
          <div class="nine columns main-col">
+
+           <div class="row item">
+
+              <div class="twelve columns">
+
+                 <h3>Startgemeenschap Noord-Limburg </h3>
+                 <p class="info">Trainer<span>&bull;</span> <em class="date">Juni 2017 tot Heden</em></p>
+
+                 <p>
+                   Bij Startgemeenschap Noord-Limburg verzorg ik bij de locatie Venray trainingen voor beginnende wedstrijdzwemmers.
+                 </p>
+
+              </div>
+
+           </div> <!-- item end -->
+
+           <div class="row item">
+
+              <div class="twelve columns">
+
+                 <h3>68 degrees hospitality experts </h3>
+                 <p class="info">All-round horecamedewerker <span>&bull;</span> <em class="date">Februari 2017 tot Heden</em></p>
+
+                 <p>
+                   Bij 68 degrees hospitality experts ben ik weerkzaam als all-round horeca medewerker. Mijn werkzaamheden hier varieren van bardiensten bij festivals tot eten uit serveren bij luxe diners tot buffetten klaarmaken in de keuken.
+                 </p>
+
+              </div>
+
+           </div> <!-- item end -->
 
             <div class="row item">
 
@@ -298,6 +373,17 @@
 
    </section> <!-- Resume Section End-->
 
+   <section id="skills">
+     <div class="row">
+
+       <h1>Mijn Skills</h1>
+
+        <div id="skillsetCol1" class="four columns collapsed"></div>
+        <div id="skillsetCol2" class="four columns collapsed"></div>
+        <div id="skillsetCol3" class="four columns collapsed"></div>
+     </div>
+   </section>
+
 
    <!-- Portfolio Section
    ================================================== -->
@@ -310,6 +396,7 @@
             <h1>Bekijk mijn werk</h1>
 
             <!-- portfolio-wrapper -->
+
             <div id="portfolio-wrapper" class="bgrid-thirds s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
@@ -329,7 +416,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <!-- <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
@@ -377,7 +464,7 @@
 
 		      <div class="description-box">
 			      <h4>TonToon</h4>
-			      <p>Ik heb het technisch ontwerp van de TonToon website gemaakt. de website is voorzien van een videoplatform voor leden en een custom CMS systeem</p>
+			      <p>Ik heb het technisch ontwerp van de TonToon website gemaakt. de website heb ik voorzien van een videoplatform voor leden en een custom CMS systeem</p>
                <span class="categories"><i class="fa fa-copyright"></i>&copy; TonToon</span>
 		      </div>
 
@@ -629,6 +716,7 @@
    <script src="js/TweenLite.min.js"></script>
    <script src="js/EasePack.min.js"></script>
    <script src="js/rAF.js"></script>
+   <script src="js/skillset.js"></script>
    <script src="js/demo-1.js"></script>
 </body>
 
