--- a/index.html
+++ b/index.html
@@ -1,41 +1,115 @@
-<!DOCTYPE html>
-<html>
-<head>
-<script>
-function startTime() {
-  var today = new Date();
-  var h = friday().getHours() - today.getHours() - 1;
-  var m = 60 - today.getMinutes();
-  var s = 60- today.getSeconds();
-  m = checkTime(m);
-  s = checkTime(s);
-  document.getElementById('txt').innerHTML =
-  h + ":" + m + ":" + s;
-  var t = setTimeout(startTime, 500);
-}
-function checkTime(i) {
-  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-  return i;
-}
+<!doctype html>
+<html id="html">
+<head>	
+    <meta charset="utf-8">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
 
-function friday() {
-    var dayOfWeek = 5;//friday
-    var date = new Date(2013, 10, 13, 16);
-    var diff = date.getDay() - dayOfWeek;
-    if (diff > 0) {
-        date.setDate(date.getDate() + 6);
-    }
-    else if (diff < 0) {
-        date.setDate(date.getDate() + ((-1) * diff))
-    }
-    return date
-}
-</script>
+	<title>Vrijmibo!</title>
 </head>
 
-<body onload="startTime()">
-<div>Het is vrijmibo over: </div>
-<div id="txt"></div>
+<body>
+
+<div class="countdown countdown-container container">
+    <div class="clock row">
+        <div class="clock-item clock-days countdown-time-value col-sm-6 col-md-3">
+            <div class="wrap">
+                <div class="inner">
+                    <div id="canvas-days" class="clock-canvas"></div>
+
+                    <div class="text">
+                        <p class="val">0</p>
+                        <p class="type-days type-time">DAGEN</p>
+                    </div><!-- /.text -->
+                </div><!-- /.inner -->
+            </div><!-- /.wrap -->
+        </div><!-- /.clock-item -->
+
+        <div class="clock-item clock-hours countdown-time-value col-sm-6 col-md-3">
+            <div class="wrap">
+                <div class="inner">
+                    <div id="canvas-hours" class="clock-canvas"></div>
+
+                    <div class="text">
+                        <p class="val">0</p>
+                        <p class="type-hours type-time">UREN</p>
+                    </div><!-- /.text -->
+                </div><!-- /.inner -->
+            </div><!-- /.wrap -->
+        </div><!-- /.clock-item -->
+
+        <div class="clock-item clock-minutes countdown-time-value col-sm-6 col-md-3">
+            <div class="wrap">
+                <div class="inner">
+                    <div id="canvas-minutes" class="clock-canvas"></div>
+
+                    <div class="text">
+                        <p class="val">0</p>
+                        <p class="type-minutes type-time">MINUTEN</p>
+                    </div><!-- /.text -->
+                </div><!-- /.inner -->
+            </div><!-- /.wrap -->
+        </div><!-- /.clock-item -->
+
+        <div class="clock-item clock-seconds countdown-time-value col-sm-6 col-md-3">
+            <div class="wrap">
+                <div class="inner">
+                    <div id="canvas-seconds" class="clock-canvas"></div>
+
+                    <div class="text">
+                        <p class="val">0</p>
+                        <p class="type-seconds type-time">SECONDEN</p>
+                    </div><!-- /.text -->
+                </div><!-- /.inner -->
+            </div><!-- /.wrap -->
+        </div><!-- /.clock-item -->
+    </div><!-- /.clock -->
+</div><!-- /.countdown-wrapper -->
+
+
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="assets/js/kinetic.js"></script>
+<script type="text/javascript" src="assets/js/jquery.final-countdown.min.js"></script>
+<script type="text/javascript">  
+    $('document').ready(function() {
+        'use strict';
+
+        let now = computeUnixTime(new Date());
+    	$('.countdown').final_countdown({
+            'start': now,
+            'end': computeUnixTime(friday()),
+            'now': now      
+        });
+
+        loadBackground();
+    });
+
+    function computeUnixTime(date) {
+        return Math.round(date.getTime()/1000);
+    }
+
+     function friday() {
+        var dayOfWeek = 5;
+        var date = new Date();
+        date.setDate(date.getDate() + (dayOfWeek + 7 - date.getDay()) % 7);
+        date.setHours(16);
+        date.setMinutes(0);
+        date.setSeconds(0);
+
+        return date;
+    }
+
+    function loadBackground() {
+        let min = 0;
+        let max = 25;
+        let offSet = Math.random() * (max - min) + min;
+        $.get("https://api.giphy.com/v1/gifs/search?api_key=GgBhSVxyJ0mbSMx6CZL9QHraulmyV6jU&q=cheers&limit=1&offset=" + offSet + "&rating=G&lang=nl", function(res) {
+            $("#html").css("background-image", "url(" + res.data[0].images.original.url + ")");
+        });
+    }
+</script>
 
 </body>
 </html>
