--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html id="html">
 <head>	
     <meta charset="utf-8">
-    <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+
+    <link href="http://fonts.googleapis.com/css?family=Raleway|Dancing+Script|Pacifico&effect=anaglyph" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
 
@@ -12,6 +13,7 @@
 <body>
 
 <div class="countdown countdown-container container">
+    <div class="row title"><span>Het is</span><h1 class="font-effect-anaglyph">VRIJMIBO</h1><span>over:</span></div>
     <div class="clock row">
         <div class="clock-item clock-days countdown-time-value col-sm-6 col-md-3">
             <div class="wrap">
