minor sec improvements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>	
     <meta charset="utf-8">
 
-    <link href="http://fonts.googleapis.com/css?family=Raleway|Dancing+Script|Pacifico&effect=anaglyph" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Dancing+Script|Pacifico&effect=anaglyph" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
 
@@ -71,7 +71,7 @@
 
 
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/kinetic.js"></script>
 <script type="text/javascript" src="assets/js/jquery.final-countdown.min.js"></script>
 <script type="text/javascript">  
