--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
 
-<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/kinetic.js"></script>
 <script type="text/javascript" src="assets/js/jquery.final-countdown.min.js"></script>
 <script type="text/javascript">  
