--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway|Dancing+Script|Pacifico&effect=anaglyph" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
 
 	<title>Vrijmibo!</title>
 </head>
@@ -71,9 +71,9 @@
 
 
 
-<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="assets/js/kinetic.js"></script>
-<script type="text/javascript" src="assets/js/jquery.final-countdown.min.js"></script>
+<script type="text/javascript" src="https://dionrats.github.io/assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://dionrats.github.io/assets/js/kinetic.js"></script>
+<script type="text/javascript" src="https://dionrats.github.io/assets/js/jquery.final-countdown.min.js"></script>
 <script type="text/javascript">  
     $('document').ready(function() {
         'use strict';
