--- a/index.html
+++ b/index.html
@@ -17,18 +17,6 @@
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
-                 <script>
-                    //check sessionCookie
-                        //if oke:
-                            //display playlist options
-                                //todo
-                            //display logout option
-                                //if clicked
-                                    //delete sessionCookie
-                                    //refresh page
-                        //if not-oke:
-                            //display connect option
-                </script>
                 <h5 class="text-white h4">Connect Spotify</h5>
                 <button type="button" class="btn btn-primary" onclick="authenticateSpotify()">Let's Go!</button>
             </div>
@@ -129,6 +117,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://dionrats.github.io/assets/js/js-cookie.js"></script>
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/app.js"></script>
 
