--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="container connected">
                     <div class="row">
                       <div class="col-sm">
-                        <img src = "http://www.fillmurray.com/140/140" class = "img-circle">
-                        <h5 class="text-white h4 name">Dion Rats</h5>
+                        <img src = "" class = "img-circle">
+                        <h5 class="text-white h4 name"></h5>
                       </div>
                       <div class="col-sm">
 
