--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
 
     <title>Vrijmibo!</title>
 </head>
@@ -147,7 +147,7 @@
         crossorigin="anonymous"></script>
     <script src="https://dionrats.github.io/assets/js/js-cookie.js"></script>
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="https://dionrats.github.io/assets/js/app.js"></script>
 
 </body>
 
